# ThriftTutorial

./: .gitignore  CMakeLists.txt  README.md  client.cpp  main.cpp  server.cpp  student.thrift  tutorial.thrift
c++/src/: CMakeCache.txt  CMakeLists.txt  Makefile  client  cmake_install.cmake  server  server.cpp
java/maventhrift/: pom.xml
java/maventhrift/src/main/java/main/: CalculatorHandler.java  JavaServer.java
java/maventhrift/src/main/java/tutorial/: InvalidOperation.java
src/: shared.thrift
